--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -11,9 +11,9 @@
         /* Generate theme at https://www.materialpalette.com */
 
         /* Primary colors */
-        --dark-primary-color:       #F57C00;
-        --default-primary-color:    #FF9800;
-        --light-primary-color:      #FFE0B2;
+        --dark-primary-color:       #66bb6a;
+        --default-primary-color:    #a5d6a7;
+        --light-primary-color:      #c8e6c9;
         --text-primary-color:       #212121; /* text / icons */
 
         /* Accent colors */
@@ -21,7 +21,7 @@
         --disabled-accent-color:    #4dcfff;
 
         /* Background colors */
-        --primary-background-color:   #FFE0B2;
+        --primary-background-color:   #c8e6c9;
 
         /* Text colors */
         --primary-text-color:       #212121;
