--- a/src/elements/app-data.html
+++ b/src/elements/app-data.html
@@ -100,7 +100,7 @@
 
     <app-indexeddb-mirror
       session="{$ firebase.indexedDbSession $}"
-      key="team"
+      key="tickets"
       data="{{_firebaseTickets}}"
       persisted-data="{{app.tickets}}">
     </app-indexeddb-mirror>
