--- a/src/elements/header-content.html
+++ b/src/elements/header-content.html
@@ -132,10 +132,10 @@
                           alt="GDG DevFest Ukraine 2016"></iron-image>
               <h3 class="dates">{$ dates $}</h3>
               <h2 class="motto">{$ motto $}</h2>
-              <div class="open-video" on-tap="_openVideo">
-                <iron-icon icon="play"></iron-icon>
-                {$ playIcon $}
-              </div>
+              <!--<div class="open-video" on-tap="_openVideo">-->
+                <!--<iron-icon icon="play"></iron-icon>-->
+                <!--{$ playIcon $}-->
+              <!--</div>-->
               <div class="action-buttons">
                 <paper-button class="primary" on-tap="_scrollToTickets" raised>{$ buyTicket $}</paper-button>
               </div>
