--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -125,6 +125,7 @@
       sessions="{{sessions}}"
       schedule="{{schedule}}"
       posts="{{posts}}"
+      tickets="{{tickets}}"
     ></app-data>
 
     <firebase-auth
@@ -192,8 +193,8 @@
                          schedule="{{schedule}}"
                          sessions="{{sessions}}"></schedule-page>
 
-          <team-page name="team"
-                     app="{{app}}"></team-page>
+          <!--<team-page name="team"-->
+                     <!--app="{{app}}"></team-page>-->
 
           <cod-page name="cod"
                     app="{{app}}"></cod-page>
@@ -203,12 +204,12 @@
 
     </app-drawer-layout>
 
-    <video-dialog id="videoDialog"
-                  video-title="[[video.title]]"
-                  youtube-id="[[video.youtubeId]]"
-                  entry-animation="scale-up-animation"
-                  exit-animation="fade-out-animation"
-                  disable-controls="[[!video.disableControls]]"></video-dialog>
+    <!--<video-dialog id="videoDialog"-->
+                  <!--video-title="[[video.title]]"-->
+                  <!--youtube-id="[[video.youtubeId]]"-->
+                  <!--entry-animation="scale-up-animation"-->
+                  <!--exit-animation="fade-out-animation"-->
+                  <!--disable-controls="[[!video.disableControls]]"></video-dialog>-->
 
     <toast-element id="toast" app="{{app}}"></toast-element>
 
