--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -11,9 +11,13 @@
         /* Generate theme at https://www.materialpalette.com */
 
         /* Primary colors */
-        --dark-primary-color:       #66bb6a;
-        --default-primary-color:    #a5d6a7;
-        --light-primary-color:      #c8e6c9;
+        --dark-primary-color:       #a5d6a7;
+        --default-primary-color:    #c8e6c9;
+        --light-primary-color:      #e8f5e9;
+
+        --dark-ticket-color:       #e0e0e0;
+        --dark-social-color:        #81c784;
+
         --text-primary-color:       #212121; /* text / icons */
 
         /* Accent colors */
