--- a/src/elements/social-feed.html
+++ b/src/elements/social-feed.html
@@ -14,7 +14,7 @@
     <style include="shared-styles">
       :host {
         display: block;
-        background: var(--default-primary-color);
+        background: var(--dark-social-color);
         color: var(--text-primary-color);
         --social-font-color: var(--text-primary-color);
       }
