--- a/src/elements/statistics-block.html
+++ b/src/elements/statistics-block.html
@@ -10,7 +10,7 @@
     <style include="shared-styles">
       :host {
         display: block;
-        background: var(--default-primary-color);
+        background: var(--dark-ticket-color);
         color: var(--text-primary-color);
       }
 
