--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -49,12 +49,12 @@
         z-index: 10;
       }
 
-      .image-overlay {
-        @apply(--layout-fit);
-        @apply(--opacity-animation);
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.7) 140%);
-        height: 100%;
-      }
+      /*.image-overlay {*/
+        /*@apply(--layout-fit);*/
+        /*@apply(--opacity-animation);*/
+        /*background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.7) 140%);*/
+        /*height: 100%;*/
+      /*}*/
 
       app-header {
         @apply(--layout-fixed-top);
