--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -207,15 +207,15 @@
               {% endfor %}
             </div>
           </div>
-          <div class="subscribe">
-            <div class="link-block-title">{$ subscribe $}</div>
-            <span>{$ subscribeNote $}</span>
-            <mailchimp-subscribe
-              app="[[app]]"
-              url="{$ mailchimp.url $}"
-              name="{$ mailchimp.name $}"
-            ></mailchimp-subscribe>
-          </div>
+          <!--<div class="subscribe">-->
+            <!--<div class="link-block-title">{$ subscribe $}</div>-->
+            <!--<span>{$ subscribeNote $}</span>-->
+            <!--<mailchimp-subscribe-->
+              <!--app="[[app]]"-->
+              <!--url="{$ mailchimp.url $}"-->
+              <!--name="{$ mailchimp.name $}"-->
+            <!--&gt;</mailchimp-subscribe>-->
+          <!--</div>-->
         </nav>
       </div>
       <div class="footer-content footer-bottom">
