--- a/src/elements/featured-people.html
+++ b/src/elements/featured-people.html
@@ -92,28 +92,28 @@
     <div class="container">
       <h4 class="heading">{$ featuredPeopleTitle $}</h4>
       <div class="people-wrapper">
-        <!--<template is="dom-repeat" items="[[featuredPeople]]" as="person">-->
-          <!--<a href$="/speakers/[[person.id]]" class="person">-->
-            <!--<iron-image-->
-              <!--class="photo"-->
-              <!--src="[[person.photoUrl]]"-->
-              <!--sizing="cover"-->
-            <!--&gt;</iron-image>-->
-            <!--<iron-image-->
-              <!--class="company-logo"-->
-              <!--src="[[person.companyLogo]]"-->
-              <!--sizing="contain"-->
-            <!--&gt;</iron-image>-->
-            <!--<h4 class="name">[[person.name]]</h4>-->
-            <!--<span class="company">[[person.country]]</span>-->
-          <!--</a>-->
-        <!--</template>-->
+        <template is="dom-repeat" items="[[featuredPeople]]" as="person">
+          <a href$="/speakers/[[person.id]]" class="person">
+            <iron-image
+              class="photo"
+              src="[[person.photoUrl]]"
+              sizing="cover"
+            ></iron-image>
+            <iron-image
+              class="company-logo"
+              src="[[person.companyLogo]]"
+              sizing="contain"
+            ></iron-image>
+            <h4 class="name">[[person.name]]</h4>
+            <span class="company">[[person.country]]</span>
+          </a>
+        </template>
       </div>
-      <!--<div>-->
-        <!--<a href="/speakers" class="block-link">-->
-          <!--<paper-button>{$ featuredPeopleViewAll $}</paper-button>-->
-        <!--</a>-->
-      <!--</div>-->
+      <div>
+        <a href="/speakers" class="block-link">
+          <paper-button>{$ featuredPeopleViewAll $}</paper-button>
+        </a>
+      </div>
     </div>
 
   </template>
