--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -70,6 +70,7 @@
         color: var(--header-color);
         transition-property: transform, background-color, color, height;
         z-index: 9;
+        text-align: -webkit-center;
       }
 
       .image-overlay-wrapper {
@@ -193,8 +194,8 @@
                          <!--schedule="{{schedule}}"-->
                          <!--sessions="{{sessions}}"></schedule-page>-->
 
-          <!--<team-page name="team"-->
-                     <!--app="{{app}}"></team-page>-->
+          <team-page name="team"
+                     app="{{app}}"></team-page>
 
           <cod-page name="cod"
                     app="{{app}}"></cod-page>
