--- a/src/elements/header-content.html
+++ b/src/elements/header-content.html
@@ -140,7 +140,7 @@
                 <paper-button class="primary" on-tap="_scrollToTickets" raised>{$ buyTicket $}</paper-button>
                 <!--<a href="https://docs.google.com/forms/d/1uFRfd34CyjAHJ9A6-U3RHK3JudKB6ZYHqQKrb5r4xJw" target="_blank" class="style-scope header-content" style="color: white; ">-->
                   <!--<paper-button class="primary style-scope header-content x-scope paper-button-0" raised="" role="button" tabindex="0" animated="" aria-disabled="false" elevation="1">Submeta uma proposta</paper-button>-->
-              <!--</div>-->
+              </div>
 
             </div>
           </div>
