--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -54,10 +54,13 @@
         --angular-js2: #e0343d;
         --protractor: #e0343d;
         --polymer: #d81b60;
+        --elasticsearch: #00b4aa;
         --dart: #00b4aa;
         --firebase: #ff9800;
         --appengine: #0d47a1;
+        --carreira: #0d47a1;
         --serviceworkers: #311b92;
+        --cognitiveservices: #311b92;
         --web-rtc: #7b1fa2;
         --kubernetes: #326de6;
         --data-sync: #006064;
@@ -65,6 +68,7 @@
         --ndk: #4caf50;
         --ble: #1565c0;
         --ci: #cddc39;
+        --cognitive-services: #cddc39;
         --tv: #d32f2f;
         --grpc: #607d8b;
         --ux: #9c27b0;
@@ -72,13 +76,23 @@
         --entrepreneurship: #673ab7;
         --design-patterns: #673ab7;
         --libraries: #ffc107;
+        --spock: #ffc107;
         --realm: #ff9800;
-        --animations: #311b92;
+        --ra: #ff9800;
+        --rv: #ff9800;
+        --transformacao-digital: #311b92;
         --go: #009688;
         --open-stack: #e0343d;
         --docker: #2196f3;
         --chrome-extensions: #ff9800;
         --progressive-web-apps: #00b4aa;
+        --pwa: #d81b60;
+        --deep-learing: #F9CB9C;
+        --iot: #FFE599;
+        --android-things: #66BB6A;
+        --startup: #FF7043;
+        --ui-ux: #BA68C8;
+        --deep-learning: #3949AB;
       }
 
       [layout] {
