ajustando cores de tags

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -45,7 +45,7 @@
 
         /* Tags colors */
         --general: #bdbdbd;
-        --android: #78c257;
+        --android: #558B2F;
         --web: #2196f3;
         --cloud: #3f51b5;
         --community: #e91e63;
@@ -76,23 +76,23 @@
         --entrepreneurship: #673ab7;
         --design-patterns: #673ab7;
         --libraries: #ffc107;
-        --spock: #ffc107;
         --realm: #ff9800;
         --ra: #ff9800;
         --rv: #ff9800;
         --transformacao-digital: #311b92;
-        --go: #009688;
+        --ai: #F4511E;
         --open-stack: #e0343d;
         --docker: #2196f3;
         --chrome-extensions: #ff9800;
         --progressive-web-apps: #00b4aa;
         --pwa: #d81b60;
-        --deep-learing: #F9CB9C;
-        --iot: #FFE599;
-        --android-things: #66BB6A;
+        --iot: #0097A7;
+        --android-things: #1B5E20;
         --startup: #FF7043;
         --ui-ux: #BA68C8;
-        --deep-learning: #3949AB;
+        --deep-learning: #D81B60;
+        --spock: #E040FB;
+        --devfest-cerrado: #616161;
       }
 
       [layout] {
