acrescentando Lounchpad build cerrado

--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -197,6 +197,9 @@
           <team-page name="team"
                      app="{{app}}"></team-page>
 
+          <build-page name="build"
+                     app="{{app}}"></build-page>
+
           <cod-page name="cod"
                     app="{{app}}"></cod-page>
 
