--- a/src/elements/speaker-details.html
+++ b/src/elements/speaker-details.html
@@ -34,7 +34,7 @@
         </div>
         <div id="title" class="bottom title toolbar-title" hidden$="{{!app.isPhoneSize}}">[[speaker.name]]</div>
       </paper-toolbar>
-      <div class="content">
+      <div class="content header">
         <div class="metadata-wrapper">
           <div class="main-info">
             <div class="photo" style$="background-image: url('[[speaker.photoUrl]]')" hidden$="{{app.isPhoneSize}}"></div>
