--- a/src/pages/build-page.html
+++ b/src/pages/build-page.html
@@ -193,9 +193,11 @@
 
     <div class="container">
       <div class="details">
-        <!--<img src="http://oi66.tinypic.com/2wmdyso.jpg"width="1600" height="900">
-        "backgroundImage": "http://oi66.tinypic.com/2wmdyso.jpg",
-        <!--<br>-->
+        <div style="text-align: center;">
+        <img src="/images/Widescrean_Tela_Projecao.jpg" width="100%">
+        </div>
+
+        <br>
         <div class="details-item" cascaded>
           <div class="details-info">
             <h2>Launchpad Build Cerrado </h2>
